src/test/ui/parser/pat-lt-bracket-3.stderr
error[E0507]: cannot move out of `self.0` which is behind a shared reference
  --> $DIR/pat-lt-bracket-3.rs:5:15
   |
LL |         match *self {
   |               ^^^^^ help: consider borrowing here: `&*self`
LL |
LL |             Foo<T>(x, y) => {
   |                    -  - ...and here
   |                    |
   |                    data moved here
   |
   = note: move occurs because these variables have types that don't implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
